# Advent-of-code-2022

./: .gitignore  CMakeLists.txt  README.md  advent_of_code.h  main.cpp
.github/workflows/: badges.yml
day01/: README.md  day01.cpp  day01.h  elf.h
day02/: README.md  day02.cpp
day03/: README.md  day03.cpp
day04/: README.md  day04.cpp
day05/: README.md  day05.cpp
day06/: README.md  day06.cpp  day06.h
day07/: README.md  day07.cpp  day07.h  filesystem.cpp  filesystem.h
day08/: README.md  day08.cpp
day09/: README.md  day09.cpp  day09.h  rope.cpp
day1/: CMakeLists.txt  README.md  day1.cpp  elf.cpp  elf.h  main.cpp
day10/: README.md  day10.cpp  day10.h
day11/: README.md  day11.cpp  day11.h
day12/: README.md  day12.cpp  day12.h
day13/: README.md  day13.cpp  day13.h
day2/: CMakeLists.txt  README.md  day2.cpp  day2.h  main.cpp
day3/: CMakeLists.txt  README.md  day3.cpp  day3.h  main.cpp
day4/: day4.cpp  day4.h
day5/: README.md  day5.cpp  day5.h
day6/: day6.cpp
day7/: day7.cpp  filesystem.h  main.cpp
day8/: day8.cpp  day8.h
day9/: day9.cpp  rope.h
