cmake_minimum_required(VERSION 3.11)
project(Advent_of_code_2022)

set(CMAKE_CXX_STANDARD 17)

add_executable(Advent_of_code main.cpp)
target_sources(Advent_of_code PRIVATE day01/day01.cpp day01/day01.h day01/elf.h day01/elf.cpp)
target_sources(Advent_of_code PRIVATE day02/day02.h day02/day02.cpp)
target_sources(Advent_of_code PRIVATE day03/day03.h day03/day03.cpp)
target_sources(Advent_of_code PRIVATE day04/day04.h day04/day04.cpp)
target_sources(Advent_of_code PRIVATE day05/day05.h day05/day05.cpp)
target_sources(Advent_of_code PRIVATE day06/day06.h day06/day06.cpp)
target_sources(Advent_of_code PRIVATE day07/day07.h day07/day07.cpp day07/filesystem.h day07/filesystem.cpp)
target_sources(Advent_of_code PRIVATE day08/day08.h day08/day08.cpp)
target_sources(Advent_of_code PRIVATE day09/day09.h day09/day09.cpp day09/rope.h day09/rope.cpp)
target_sources(Advent_of_code PRIVATE day10/day10.h day10/day10.cpp)
target_sources(Advent_of_code PRIVATE day11/day11.h day11/day11.cpp)
